--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,42 @@
 name: CI
+
 on:
-  push: { branches: [ "main" ] }
-  pull_request: { branches: [ "main" ] }
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: "3.11" }
-      - name: Install deps
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt || true
+          pip install -r requirements.txt
+          pip install ruff flake8
+
       - name: Syntax check
-        run: python -m compileall -q email_bot.py
+        run: |
+          python -m compileall -q email_bot.py
+
+      - name: Dependency check
+        run: |
+          pip check
+
+      - name: Lint with Ruff
+        run: |
+          ruff check .
+
+      - name: Lint with Flake8
+        run: |
+          flake8 --max-line-length=100 .
