--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install ruff flake8
+          pip install ruff flake8 pytest pytest-cov
 
       - name: Syntax check
         run: |
@@ -40,3 +40,7 @@ jobs:
       - name: Lint with Flake8
         run: |
           flake8 --max-line-length=100 .
+
+      - name: Run tests with Pytest
+        run: |
+          pytest --maxfail=3 --disable-warnings -q --cov=. --cov-report=term-missing
