--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install ruff flake8 pytest pytest-cov
+          pip install ruff flake8 black mypy pytest pytest-cov
 
       - name: Syntax check
         run: |
@@ -40,6 +40,14 @@ jobs:
       - name: Lint with Flake8
         run: |
           flake8 --max-line-length=100 .
+
+      - name: Check formatting with Black
+        run: |
+          black --check --diff .
+
+      - name: Type check with Mypy
+        run: |
+          mypy .
 
       - name: Run tests with Pytest
         run: |
