--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 EMAIL_ADDRESS="your_mail@mail.ru"
 EMAIL_PASSWORD="app_specific_password"
-TELEGRAM_BOT_TOKEN="123456789:ABC-DEF1234ghIkl-zyx57W2v1u123ew11"
+TELEGRAM_BOT_TOKEN="your_telegram_bot_token"
