Add tests for email utilities and update CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,4 +51,4 @@ jobs:
 
       - name: Run tests with Pytest
         run: |
-          pytest --maxfail=3 --disable-warnings -q --cov=. --cov-report=term-missing
+          pytest --maxfail=1 --disable-warnings --cov=. --cov-report=term-missing
