feat: support inline logo and styled signature

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 EMAIL_ADDRESS="your_mail@mail.ru"
 EMAIL_PASSWORD="app_specific_password"
 TELEGRAM_BOT_TOKEN="your_telegram_bot_token"
+INLINE_LOGO=1
