Add synthetic gold dataset factories and network injection

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,5 @@ repos:
       - id: check-merge-conflict
       - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: forbid-binary
+        files: "\\.(pdf|docx|xlsx|zip)$"
