--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ PyMuPDF>=1.24
 python-docx>=1.1
 python-dotenv>=1.0
 pytest-asyncio>=0.23
+# needed for strict IDNA handling
+idna>=3.6
 # regex  # optional: speeds up unicode regex; code works without it
