test: cover smtp ssl flag

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ EMAIL_ADDRESS="your_mail@mail.ru"
 EMAIL_PASSWORD="app_specific_password"
 TELEGRAM_BOT_TOKEN="your_telegram_bot_token"
 INLINE_LOGO=1
+SMTP_PORT=587
+SMTP_SSL=0
