--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ TELEGRAM_BOT_TOKEN="your_telegram_bot_token"
 INLINE_LOGO=1
 SMTP_PORT=587
 SMTP_SSL=0
+SMTP_TIMEOUT=30
+FILTER_SUPPORT=0
+FILTER_BLOCKLIST=
