--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,34 @@
-EMAIL_ADDRESS="your_mail@mail.ru"
-EMAIL_PASSWORD="app_specific_password"
-TELEGRAM_BOT_TOKEN="your_telegram_bot_token"
+#########################################
+# ОБЯЗАТЕЛЬНО ЗАПОЛНИТЕ ПЕРЕД ЗАПУСКОМ #
+#########################################
+EMAIL_ADDRESS=your_mail@mail.ru              # реальный адрес на mail.ru
+EMAIL_PASSWORD=app_specific_password         # пароль приложения (Mail.ru → Безопасность)
+TELEGRAM_BOT_TOKEN=123456:ABCDEF-telegram    # токен от @BotFather
+
+#########################################
+# IMAP / SMTP
+#########################################
+IMAP_HOST=imap.mail.ru
+IMAP_PORT=993
+SMTP_HOST=smtp.mail.ru
+SMTP_PORT=465                               # 465 (SSL) или 587 (STARTTLS)
+SMTP_SSL=1                                  # 1 = SSL, 0 = STARTTLS
+SMTP_TIMEOUT=45                             # таймаут в секундах
+
+#########################################
+# Встраивание логотипа (если шаблон поддерживает)
+#########################################
 INLINE_LOGO=1
-SMTP_PORT=587
-SMTP_SSL=0
-SMTP_TIMEOUT=30
-FILTER_SUPPORT=0
-FILTER_BLOCKLIST=
+
+#########################################
+# Ручная рассылка — правило 180 дней
+#########################################
+MANUAL_ENFORCE_180=1                        # 1 = применять правило; 0 = не применять
+MANUAL_DAYS=180
+MANUAL_ALLOW_OVERRIDE=1                     # 1 = показать кнопку «Отправить всем»
+
+#########################################
+# Расширяемый блок-лист (опционально)
+#########################################
+FILTER_SUPPORT=0                            # 1 = блокировать support@
+FILTER_BLOCKLIST=help@x.com,alerts@news.io  # CSV-список адресов (или используйте файл blocked_emails.txt)
