Fix: keep leading digit in emails; wire send stats to SMTP core; add tests

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,9 @@ MANUAL_ALLOW_OVERRIDE=1                     # 1 = показать кнопку 
 #########################################
 FILTER_SUPPORT=0                            # 1 = блокировать support@
 FILTER_BLOCKLIST=help@x.com,alerts@news.io  # CSV-список адресов (или используйте файл blocked_emails.txt)
+
+#########################################
+# Отчёты об отправке
+#########################################
+SEND_STATS_PATH=var/send_stats.jsonl
+REPORT_TZ=Europe/Moscow
