--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ pytest-asyncio>=0.23
 # needed for strict IDNA handling
 idna>=3.6
 # regex  # optional: speeds up unicode regex; code works without it
+email-validator==2.1.1.post1
+idna==3.7
