--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ python-docx>=1.1
 python-dotenv>=1.0
 pytest-asyncio>=0.23
 # regex  # optional: speeds up unicode regex; code works without it
-email-validator==2.1.1.post1
+email-validator==2.3.0
 idna==3.7
