feat: add notification level for Telegram bot

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,12 @@ SMTP_TIMEOUT=45                             # таймаут в секундах
 INLINE_LOGO=1
 
 #########################################
+# Уровень уведомлений Telegram-бота
+#########################################
+# full = прежнее поведение; brief = только старт/финиш; none = полная тишина
+NOTIFY_LEVEL=brief
+
+#########################################
 # Ручная рассылка — правило 180 дней
 #########################################
 MANUAL_ENFORCE_180=1                        # 1 = применять правило; 0 = не применять
