--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,7 @@ NOTIFY_LEVEL=brief
 MANUAL_ENFORCE_180=1                        # 1 = применять правило; 0 = не применять
 MANUAL_DAYS=180
 MANUAL_ALLOW_OVERRIDE=1                     # 1 = показать кнопку «Отправить всем»
+COOLDOWN_DAYS=180                           # глобальный кулдаун перед отправкой
 
 #########################################
 # Расширяемый блок-лист (опционально)
