Improve PDF parsing and suspect email handling

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,14 @@ REPORT_TZ=Europe/Moscow
 FOOTNOTES_MODE=smart
 AGGRESSIVE_LOCAL_REPAIR=1
 
-# Требовать ручного подтверждения «подозрительных» e-mail перед отправкой:
-# 1 = не включать их в «К отправке» по умолчанию и показать кнопки подтверждения
+# --- Parsing quality toggles (safe by default) ---
+# Строгая левая граница: если перед адресом сразу буква/цифра — помечать как подозрительный
+STRICT_LEFT_BOUNDARY=1
+# Не включать подозрительные в "к отправке" без подтверждения
 SUSPECTS_REQUIRE_CONFIRM=1
+# Ремонт «хвоста» домена до валидной TLD (например, 'rurussia' -> 'ru')
+REPAIR_TLD_TAIL=1
+# Собирать склейки переносов и дефисов в PDF-тексте (A-\nB -> AB)
+PDF_JOIN_HYPHEN_BREAKS=1
+# Собирать разрывы строки внутри адреса вокруг '.' и '@'
+PDF_JOIN_EMAIL_BREAKS=1
