--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ pytest-asyncio>=0.23
 # regex  # optional: speeds up unicode regex; code works without it
 email-validator==2.3.0
 idna==3.7
+httpx[http2]>=0.27
+beautifulsoup4>=4.12
+charset-normalizer>=3.3
