Add diagnostic helpers and startup health checks

--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,15 @@ MANUAL_DAYS=180
 MANUAL_ALLOW_OVERRIDE=1                     # 1 = показать кнопку «Отправить всем»
 
 #########################################
+# Диагностика (необязательные флаги)
+#########################################
+# DIAG_PING_SMTP=1
+# DIAG_PING_IMAP=1
+# SMTP_MODE=auto                            # auto|ssl|starttls (диагностика покажет активный)
+# EMAIL_ROLE_PERSONAL_THRESHOLD=0.9
+# HISTORY_DB_PATH=var/state.db              # переопределить путь к истории отправок
+
+#########################################
 # Расширяемый блок-лист (опционально)
 #########################################
 FILTER_SUPPORT=0                            # 1 = блокировать support@
