--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,10 @@ MANUAL_ALLOW_OVERRIDE=1                     # 1 = показать кнопку 
 # EMAIL_ROLE_PERSONAL_THRESHOLD=0.9
 # HISTORY_DB_PATH=var/state.db              # переопределить путь к истории отправок
 
+# Прогресс-статус при крауле (троттлинг обновлений)
+# Максимум обновлений статуса в минуту. Значение 100 ≈ одно обновление каждые 0.6 сек.
+PROGRESS_MAX_UPDATES_PER_MINUTE=100
+
 #########################################
 # Расширяемый блок-лист (опционально)
 #########################################
