Add heuristic section discovery and interactive selection

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,10 @@ MANUAL_ALLOW_OVERRIDE=1                     # 1 = показать кнопку 
 # Максимум обновлений статуса в минуту. Значение 100 ≈ одно обновление каждые 0.6 сек.
 PROGRESS_MAX_UPDATES_PER_MINUTE=100
 
+# Авто-подбор разделов
+# Сколько кандидатов разделов предлагать максимум
+DISCOVERY_MAX_CANDIDATES=12
+
 #########################################
 # Расширяемый блок-лист (опционально)
 #########################################
