--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp>=3.9
 pandas>=2.0
 openpyxl>=3.1
 PyMuPDF>=1.24
+pdfminer.six>=20221105
 python-docx>=1.1
 python-dotenv>=1.0
 pytest-asyncio>=0.23
