--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,18 @@
 [tool.pytest.ini_options]
 addopts = "-q"
 
-[tool.mypy]
-python_version = "3.11"
-ignore_missing_imports = true
-disallow_untyped_defs = true
-warn_unused_ignores = true
-
 [tool.ruff]
+target-version = "py311"
 line-length = 100
-select = ["E", "F", "I", "UP", "B", "SIM"]
-ignore = ["E203"]
+extend-exclude = ["build", "dist", ".venv", "venv"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP", "B", "W"]
+ignore = [
+    "E501",  # длину строки контролируем осознанно
+]
+
+[tool.ruff.format]
+quote-style = "preserve"
+indent-style = "space"
+skip-magic-trailing-comma = false
