Lock PTB runtime & entrypoint; drop aiogram from runtime deps. UI/logic unchanged.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-python-telegram-bot>=20,<21
-aiogram>=3.4,<4
+﻿python-telegram-bot==20.8
 aiohttp>=3.9
 pandas>=2.0
 openpyxl>=3.1
 PyMuPDF>=1.24
+pdfminer.six>=20221105
 python-docx>=1.1
 python-dotenv>=1.0
 pytest-asyncio>=0.23
-# regex  # optional: speeds up unicode regex; code works without it
 email-validator==2.3.0
 idna==3.7
 httpx[http2]~=0.26.0
 beautifulsoup4>=4.12
 charset-normalizer>=3.3
+dnspython>=2.6
