Customize bot start message via env

--- a/.env.example
+++ b/.env.example
@@ -136,3 +136,18 @@ DEBUG_EMAIL_PARSE_LOG=0
 TEMPLATES_NEW_SIGNATURE=bioinformatics,geography,psychology
 
 
+#########################################
+# Приветствие /start (Telegram-бот)
+#########################################
+# Путь к файлу с приветствием (HTML или текст). Если указан и существует — имеет приоритет.
+# Пример: templates/start_legacy.html
+# START_MESSAGE_HTML_PATH=templates/start_legacy.html
+
+# Текст приветствия (можно с HTML). Используется, если файл не указан/не найден.
+# Пример:
+# START_MESSAGE_TEXT=<b>Привет!</b> Я помогу с рассылкой. Нажмите «Старт», чтобы продолжить.
+
+# Показывать ли клавиатуру направлений под приветствием (1=да, 0=нет)
+START_MESSAGE_SHOW_DIRECTIONS=1
+
+
