feat(bot): make /start message configurable

--- a/.env.example
+++ b/.env.example
@@ -1,122 +1,82 @@
-#########################################
-# ОБЯЗАТЕЛЬНО ЗАПОЛНИТЕ ПЕРЕД ЗАПУСКОМ #
-#########################################
-EMAIL_ADDRESS=your_mail@mail.ru              # реальный адрес на mail.ru
-EMAIL_PASSWORD=app_specific_password         # пароль приложения (Mail.ru → Безопасность)
-APPEND_TO_SENT=1                             # дублировать отправку в «Отправленные»
-USE_SMTP_SESSIONS=0                          # 1 = переиспользовать одно SMTP-соединение
-TELEGRAM_BOT_TOKEN=123456:ABCDEF-telegram    # токен от @BotFather
+# -*- coding: utf-8 -*-
 
 #########################################
-# IMAP / SMTP
+# Общая конфигурация
 #########################################
-IMAP_HOST=imap.mail.ru
-IMAP_PORT=993
-IMAP_TIMEOUT=15                              # таймаут соединения, секунд
-IMAP_RETRIES=3                               # кол-во повторов при ошибках
-IMAP_IPV4_ONLY=1                             # 1 = избегать IPv6 (актуально для VPN)
-INBOX_MAILBOX=INBOX                          # папка входящих писем
-SENT_MAILBOX=Отправленные                    # папка «Отправленные» (Mail.ru)
-SMTP_HOST=smtp.mail.ru
-SMTP_PORT=465                                # 465 (SSL) или 587 (STARTTLS)
-SMTP_SSL=1                                   # 1 = SSL, 0 = STARTTLS
-SMTP_TIMEOUT=45                              # таймаут в секундах
-SMTP_MODE=auto                               # auto|ssl|starttls
-SMTP_CONNECT_RETRIES=3                       # повторы при ошибке подключения
-SMTP_CONNECT_BACKOFF=2                       # экспоненциальный бэкофф (секунд)
+ENV=dev
 
 #########################################
-# Ограничения отправки
+# Логирование
 #########################################
-DAILY_SEND_LIMIT=300                         # суточный лимит рассылки
-COOLDOWN_DAYS=180                            # глобальный кулдаун перед повторной отправкой
+LOG_LEVEL=INFO
+LOG_JSON=0
+LOG_SENTRY_DSN=
+LOG_SENTRY_ENVIRONMENT=prod
+LOG_FILE=
+LOG_ROTATION=10 MB
+LOG_RETENTION=14 days
 
 #########################################
-# Встраивание логотипа (если шаблон поддерживает)
+# Django
 #########################################
-INLINE_LOGO=1
+SECRET_KEY=django-insecure-12345
+DEBUG=0
+ALLOWED_HOSTS=*
+CSRF_TRUSTED_ORIGINS=
+DJANGO_SETTINGS_MODULE=emailbot.config.settings
 
 #########################################
-# Уровень уведомлений Telegram-бота
+# База данных
 #########################################
-# full = прежнее поведение; brief = только старт/финиш; none = полная тишина
-NOTIFY_LEVEL=brief
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME=emailbot
+DB_USER=emailbot
+DB_PASSWORD=emailbot
+DB_HOST=postgres
+DB_PORT=5432
 
 #########################################
-# Ручная рассылка — правило 180 дней
+# Redis
 #########################################
-MANUAL_ENFORCE_180=1                        # 1 = применять правило; 0 = не применять
-MANUAL_DAYS=180
-MANUAL_ALLOW_OVERRIDE=1                     # 1 = показать кнопку «Отправить всем»
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
 
 #########################################
-# Диагностика (необязательные флаги)
+# Celery
 #########################################
-# DIAG_PING_SMTP=1
-# DIAG_PING_IMAP=1
-# SMTP_MODE=auto                            # auto|ssl|starttls (диагностика покажет активный)
-# EMAIL_ROLE_PERSONAL_THRESHOLD=0.9
-# HISTORY_DB_PATH=var/state.db              # переопределить путь к истории отправок
-
-# Прогресс-статус при крауле (троттлинг обновлений)
-# Максимум обновлений статуса в минуту. Значение 100 ≈ одно обновление каждые 0.6 сек.
-PROGRESS_MAX_UPDATES_PER_MINUTE=100
-
-# Авто-подбор разделов
-# Сколько кандидатов разделов предлагать максимум
-DISCOVERY_MAX_CANDIDATES=12
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
 
 #########################################
-# Расширяемый блок-лист (опционально)
+# Э-mail отправка
 #########################################
-FILTER_SUPPORT=0                            # 1 = блокировать support@
-FILTER_BLOCKLIST=help@x.com,alerts@news.io  # CSV-список адресов (или используйте файл blocked_emails.txt)
+EMAIL_FROM=robot@example.com
+EMAIL_FROM_NAME=EmailBot
+EMAIL_REPLY_TO=
+EMAIL_RETURN_PATH=
+EMAIL_SUBJECT_PREFIX=
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.mail.ru
+EMAIL_PORT=465
+EMAIL_USE_SSL=1
+EMAIL_USE_TLS=0
+EMAIL_HOST_USER=robot@example.com
+EMAIL_HOST_PASSWORD=password
+EMAIL_TIMEOUT=10
+EMAIL_SSL_KEYFILE=
+EMAIL_SSL_CERTFILE=
+EMAIL_FAIL_SILENTLY=0
+EMAIL_FILE_PATH=
+EMAIL_FILE_PREFIX=
+EMAIL_FILE_SUFFIX=
+EMAIL_SMTP_DEBUG=0
 
 #########################################
-# Поведение санитайзера / нормализация адресов
+# POP3 (обработка бонсов)
 #########################################
-OBFUSCATION_ENABLE=1                        # включить деобфускацию адресов
-CONFUSABLES_NORMALIZE=1                     # нормализовать «похожие» символы
-IDNA_DOMAIN_NORMALIZE=1                     # приводить домены к IDNA (punycode)
-STRICT_DOMAIN_VALIDATE=1                    # строгая проверка доменов
-DROP_REASON_IN_AUDIT=1                      # писать причину дропа в аудит-лог
-FOOTNOTES_MODE=smart
-AGGRESSIVE_LOCAL_REPAIR=1
-STRICT_LEFT_BOUNDARY=1                      # строгая левая граница при парсинге
-SUSPECTS_REQUIRE_CONFIRM=1                  # требовать подтверждения для подозрительных
-REPAIR_TLD_TAIL=1
-PDF_JOIN_HYPHEN_BREAKS=1
-PDF_JOIN_EMAIL_BREAKS=1
-
-#########################################
-# Ограничение на тип e-mail (роль и FIO)
-#########################################
-EMAIL_ROLE_PERSONAL_ONLY=1                  # 1 = пропускать только персональные адреса
-EMAIL_ROLE_PERSONAL_THRESHOLD=0.9           # порог совпадения ФИО для персональных адресов
-
-#########################################
-# Подпись-пояснение к кнопке «Отписаться»
-#########################################
-# 1 = включить подпись; 0 = выключить
-UNSUBSCRIBE_CAPTION_ENABLE=1
-# Текст подписи по умолчанию:
-# «Если вы получили это письмо по ошибке или не хотите получать рассылку — нажмите «Отписаться».»
-# Можно переопределить при необходимости (UTF-8, кавычки допускаются)
-UNSUBSCRIBE_CAPTION_TEXT=Если вы получили это письмо по ошибке или не хотите получать рассылку — нажмите «Отписаться».
-# Делать слово «Отписаться» ссылкой (тот же URL, что и кнопка/хедеры).
-# По умолчанию включено:
-UNSUBSCRIBE_CAPTION_WITH_LINK=1
-
-#########################################
-# Отчёты / логи
-#########################################
-SEND_STATS_PATH=var/send_stats.jsonl
-REPORT_TZ=Europe/Moscow
-
-#########################################
-# Bounce-сканер (fallback POP3, если IMAP недоступен)
-#########################################
-BOUNCE_FETCH_BACKEND=auto                   # auto|imap|pop3
+POP3_ENABLED=0
 POP3_HOST=pop.mail.ru
 POP3_PORT=995
 POP3_SSL=1
@@ -139,15 +99,72 @@ TEMPLATES_NEW_SIGNATURE=bioinformatics,geography,psychology
 #########################################
 # Приветствие /start (Telegram-бот)
 #########################################
-# Путь к файлу с приветствием (HTML или текст). Если указан и существует — имеет приоритет.
+# Путь к файлу с приветствием (HTML или текст).
+# Если указан и файл существует — используется он.
 # Пример: templates/start_legacy.html
 # START_MESSAGE_HTML_PATH=templates/start_legacy.html
 
-# Текст приветствия (можно с HTML). Используется, если файл не указан/не найден.
+# Текст приветствия (можно с HTML), если файл не указан/не найден.
 # Пример:
 # START_MESSAGE_TEXT=<b>Привет!</b> Я помогу с рассылкой. Нажмите «Старт», чтобы продолжить.
 
-# Показывать ли клавиатуру направлений под приветствием (1=да, 0=нет)
+# Показывать ли список направлений под приветствием (1=да, 0=нет)
 START_MESSAGE_SHOW_DIRECTIONS=1
 
 
+#########################################
+# Подпись-пояснение к кнопке «Отписаться»
+#########################################
+EMAIL_UNSUBSCRIBE_SIGNATURE=Если хотите прекратить получать письма — нажмите «Отписаться».
+
+#########################################
+# Лимиты/ограничения
+#########################################
+EMAIL_PER_DOMAIN_LIMIT=300                 # максимум адресов на домен за рассылку
+EMAIL_PER_SEND_LIMIT=800                   # максимум писем за одну отправку
+EMAIL_DOMAIN_LIMIT_WINDOW_DAYS=180         # минимальный интервал между рассылками
+
+#########################################
+# Telegram-бот: клавиатура направлений
+#########################################
+BOT_DIRECTIONS_KEYBOARD_COLUMNS=2
+
+#########################################
+# Telegram-бот: дополнительные настройки
+#########################################
+BOT_API_TOKEN=
+BOT_WEBHOOK_HOST=
+BOT_WEBHOOK_PATH=
+BOT_WEBHOOK_SECRET=
+BOT_WEBHOOK_PORT=8443
+BOT_WEBHOOK_CERT=
+BOT_WEBHOOK_PRIV=
+
+#########################################
+# Источники данных для рассылок
+#########################################
+DATA_SOURCES_PATH=
+DATA_SOURCES_DIR=
+DATA_SOURCES_LABEL=
+
+#########################################
+# Статистика (Metabase)
+#########################################
+METABASE_SITE_URL=
+METABASE_SECRET_KEY=
+
+#########################################
+# Система уведомлений
+#########################################
+NOTIFICATIONS_SLACK_TOKEN=
+NOTIFICATIONS_SLACK_CHANNEL=
+NOTIFICATIONS_SLACK_ICON=:
+NOTIFICATIONS_SLACK_USERNAME=
+NOTIFICATIONS_EMAIL=
+NOTIFICATIONS_EMAIL_SUBJECT=
+
+#########################################
+# Разное
+#########################################
+SENTRY_DSN=
+SENTRY_ENVIRONMENT=
