Hardcode short start message

--- a/.env.example
+++ b/.env.example
@@ -122,4 +122,7 @@ DEBUG_EMAIL_PARSE_LOG=0
 #########################################
 TEMPLATES_NEW_SIGNATURE=bioinformatics,geography,psychology
 
+#########################################
+# Приветствие /start фиксировано в коде: «Можно загрузить данные»
+#########################################
 
