Add export and text correction flows for parsed emails

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,7 @@ SMTP_CONNECT_BACKOFF=2                       # экспоненциальный 
 # Ограничения отправки
 #########################################
 DAILY_SEND_LIMIT=200                         # суточный лимит рассылки
+MAX_EMAILS_PER_DAY=300                       # лимит писем в день (бот)
 COOLDOWN_DAYS=180                            # глобальный кулдаун перед повторной отправкой
 
 #########################################
