--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,10 @@
 [pytest]
-addopts = -q
+addopts = -ra
 testpaths = tests
 python_files = test_*.py
+markers =
+    optional: tests that require optional dependencies (PDF/HTML parsers, etc.)
+    legacy: tests that expect legacy API symbols
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::UserWarning
