--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ python_files = test_*.py
 markers =
     optional: tests that require optional dependencies (PDF/HTML parsers, etc.)
     legacy: tests that expect legacy API symbols
+    net: tests that require aiohttp or other network clients
 filterwarnings =
     ignore::DeprecationWarning
     ignore::UserWarning
