--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ email-validator==2.3.0
 idna==3.7
 httpx[http2]~=0.26.0
 beautifulsoup4>=4.12
+regex>=2024.5.15
 charset-normalizer>=3.3
 dnspython>=2.6
