Handle soft bounce retries separately from hard failures

--- a/.env.example
+++ b/.env.example
@@ -120,6 +120,11 @@ POP3_SSL=1
 POP3_TIMEOUT=20
 BOUNCE_SINCE_DAYS=7                         # глубина сканирования бонсов
 
+# Повторы после временных сбоев доставки (soft-bounce)
+SOFT_BOUNCE_RETRY_HOURS=48                  # через сколько часов пробовать снова
+SOFT_BOUNCE_MAX_RETRIES=2                   # максимум повторных попыток
+SOFT_BOUNCE_PATH=var/soft_bounces.jsonl     # путь к очереди soft-bounce
+
 #########################################
 # Парсинг e-mail (отладка)
 #########################################
