Improve SMTP/IMAP env wiring and OCR docs

--- a/.env.example
+++ b/.env.example
@@ -68,6 +68,13 @@ MANUAL_ALLOW_OVERRIDE=1                     # 1 = показать кнопку 
 # EMAIL_ROLE_PERSONAL_THRESHOLD=0.9
 # HISTORY_DB_PATH=var/state.db              # переопределить путь к истории отправок
 
+#########################################
+# OCR распознавание
+#########################################
+ENABLE_OCR=0                               # 1 = распознавать сканы (медленнее обработка)
+OCR_PAGE_LIMIT=10                          # максимум страниц на документ для OCR
+OCR_TIME_LIMIT=30                          # таймаут OCR на документ, секунд
+
 # Прогресс-статус при крауле (троттлинг обновлений)
 # Максимум обновлений статуса в минуту. Значение 100 ≈ одно обновление каждые 0.6 сек.
 PROGRESS_MAX_UPDATES_PER_MINUTE=100
