Persist unsubscribe addresses in blocklist

--- a/.env.example
+++ b/.env.example
@@ -90,6 +90,28 @@ FILTER_SUPPORT=0                            # 1 = блокировать support
 FILTER_BLOCKLIST=help@x.com,alerts@news.io  # CSV-список адресов (или используйте файл blocked_emails.txt)
 
 #########################################
+# Stop-list / авто-отписка
+#########################################
+# Путь к файлу с отписавшимися/заблокированными адресами
+# Если не задан, используется ./blocked_emails.txt
+BLOCKED_LIST_PATH=blocked_emails.txt
+
+#########################################
+# Краулер (глубокий парсинг сайта)
+#########################################
+# Максимум страниц на домен при глубоком скане
+CRAWL_MAX_PAGES_PER_DOMAIN=50
+# Ограничение по времени на один запуск скана (сек)
+CRAWL_TIME_BUDGET_SECONDS=120
+# Пауза между запросами к одному хосту (мс)
+CRAWL_PER_HOST_DELAY_MS=500
+# Кэш robots.txt и его TTL
+ROBOTS_CACHE_PATH=var/robots_cache.json
+ROBOTS_CACHE_TTL_SECONDS=86400
+# Заголовок User-Agent при краулинге
+CRAWL_USER_AGENT=EmailBotCrawler/1.0
+
+#########################################
 # Поведение санитайзера / нормализация адресов
 #########################################
 OBFUSCATION_ENABLE=1                        # включить деобфускацию адресов
