--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,33 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest ruff
+          pip install -r requirements.txt
+          pip install ruff flake8 black mypy pytest pytest-cov
 
-      - name: Run static checks
+      - name: Syntax check
+        run: |
+          python -m compileall -q email_bot.py
+
+      - name: Dependency check
+        run: |
+          pip check
+
+      - name: Run static analysis
         run: |
           ruff check .
+          mypy || true
+
+      - name: Lint with Flake8
+        run: |
+          flake8 --max-line-length=100 .
+
+      - name: Check formatting with Black
+        run: |
+          black --check --diff .
+
+      - name: Run tests with Pytest
+        run: |
+          pytest --maxfail=1 --disable-warnings --cov=. --cov-report=term-missing
 
       - name: Run API contract tests
         run: |
