--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ python-telegram-bot>=20,<21
 pandas>=2.0
 openpyxl>=3.1
 aiohttp==3.9.5
-PyMuPDF==1.24.9
+PyMuPDF>=1.24.0
 pdfminer.six==20221105
 python-docx>=1.1
 python-dotenv>=1.0
